# ChangeLog for media-plugins/gmpc-avahi
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gmpc-avahi/ChangeLog,v 1.9 2008/12/26 19:06:46 angelos Exp $

*gmpc-avahi-0.17.0 (26 Dec 2008)

  26 Dec 2008; Christoph Mende <angelos@gentoo.org>
  +gmpc-avahi-0.17.0.ebuild:
  Version bump

  20 Dec 2008; nixnut <nixnut@gentoo.org> gmpc-avahi-0.16.0.ebuild:
  ~ppc wrt bug 251332

  17 Dec 2008; Markus Meier <maekke@gentoo.org> gmpc-avahi-0.16.0.ebuild:
  amd64/x86 stable, bug #251332

  24 Sep 2008; Christoph Mende <angelos@gentoo.org>
  gmpc-avahi-0.16.0.ebuild:
  Fix multilib paths

*gmpc-avahi-0.16.0 (24 Sep 2008)

  24 Sep 2008; Christoph Mende <angelos@gentoo.org>
  +gmpc-avahi-0.16.0.ebuild:
  Version bump

  03 Mar 2008; <cla@gentoo.org> gmpc-avahi-0.15.5.0.ebuild:
  Stable on x86 (bug #212077)

  02 Mar 2008; Christoph Mende <angelos@gentoo.org>
  gmpc-avahi-0.15.5.0.ebuild:
  Stable on amd64, bug #212077

  30 Jan 2008; Dawid Węgliński <cla@gentoo.org>
  gmpc-avahi-0.15.5.0.ebuild:
  Add ~x86 keyword (bug #207687)

*gmpc-avahi-0.15.5.0 (27 Jan 2008)

  27 Jan 2008; Christoph Mende <angelos@gentoo.org>
  +gmpc-avahi-0.15.5.0.ebuild:
  Initial import
