@@ -1,9 +1,11 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gmpc-avahi/gmpc-avahi-0.17.0.ebuild,v 1.2 2008/12/26 19:32:26 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gmpc-extraplaylist/gmpc-extraplaylist-0.17.0.ebuild,v 1.1 2008/12/26 19:30:33 angelos Exp $
 
-DESCRIPTION="This plugin discovers avahi enabled mpd servers"
-HOMEPAGE="http://gmpcwiki.sarine.nl/index.php/Avahi"
+inherit multilib
+
+DESCRIPTION="This plugin adds a second pane showing the playlist"
+HOMEPAGE="http://gmpcwiki.sarine.nl/index.php/Extra_playlist"
 SRC_URI="mirror://sourceforge/musicpd/${P}.tar.gz"
 
 LICENSE="GPL-2"
@@ -12,8 +14,7 @@ KEYWORDS="~amd64 ~ppc ~x86"
 IUSE=""
 
 RDEPEND=">=media-sound/gmpc-${PV}
-	dev-libs/libxml2
-	net-dns/avahi"
+	dev-libs/libxml2"
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig"
 
