@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/gmpc-extraplaylist
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gmpc-extraplaylist/ChangeLog,v 1.3 2008/12/20 17:08:59 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gmpc-extraplaylist/ChangeLog,v 1.4 2008/12/26 19:30:33 angelos Exp $
+
+*gmpc-extraplaylist-0.17.0 (26 Dec 2008)
+
+  26 Dec 2008; Christoph Mende <angelos@gentoo.org>
+  +gmpc-extraplaylist-0.17.0.ebuild:
+  Version bump
 
   20 Dec 2008; nixnut <nixnut@gentoo.org> gmpc-extraplaylist-0.16.0.ebuild:
   ~ppc wrt bug 251332
