@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gmpc-avahi
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gmpc-avahi/ChangeLog,v 1.9 2008/12/26 19:06:46 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gmpc-avahi/ChangeLog,v 1.10 2008/12/26 19:32:26 angelos Exp $
+
+  26 Dec 2008; Christoph Mende <angelos@gentoo.org>
+  gmpc-avahi-0.17.0.ebuild:
+  Removed unneeded multilib hack
 
 *gmpc-avahi-0.17.0 (26 Dec 2008)
 
